--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
                             <svg class="navigation_list-icon">
                             <use href="/images/svg/symbol-defs.svg#icon-question"></use>
                             </svg>
-
-                            <!-- <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14 0C11.2311 0 8.52431 0.821086 6.22202 2.35942C3.91973 3.89776 2.12532 6.08426 1.06569 8.64243C0.00606598 11.2006 -0.271181 14.0155 0.269012 16.7313C0.809205 19.447 2.14258 21.9416 4.10051 23.8995C6.05845 25.8574 8.55301 27.1908 11.2687 27.731C13.9845 28.2712 16.7994 27.9939 19.3576 26.9343C21.9157 25.8747 24.1022 24.0803 25.6406 21.778C27.1789 19.4757 28 16.7689 28 14C28 12.1615 27.6379 10.341 26.9343 8.64243C26.2307 6.94387 25.1995 5.40052 23.8995 4.1005C22.5995 2.80048 21.0561 1.76925 19.3576 1.06569C17.659 0.362121 15.8385 0 14 0ZM14 25.2C11.7849 25.2 9.61945 24.5431 7.77762 23.3125C5.93579 22.0818 4.50026 20.3326 3.65256 18.286C2.80485 16.2395 2.58306 13.9876 3.01521 11.815C3.44737 9.6424 4.51406 7.64675 6.08041 6.0804C7.64676 4.51405 9.64241 3.44736 11.815 3.0152C13.9876 2.58305 16.2395 2.80485 18.2861 3.65255C20.3326 4.50025 22.0818 5.93578 23.3125 7.77761C24.5431 9.61944 25.2 11.7848 25.2 14C25.2 16.9704 24.02 19.8192 21.9196 21.9196C19.8192 24.02 16.9704 25.2 14 25.2Z" fill="#CB6A84"/>
-                            <path d="M13.9995 5.5997C12.6999 5.5997 11.4536 6.11599 10.5347 7.03498C9.61574 7.95398 9.09949 9.2004 9.09949 10.5001C9.09949 10.8714 9.24699 11.2275 9.50954 11.4901C9.77209 11.7526 10.1282 11.9002 10.4995 11.9002C10.8708 11.9002 11.2269 11.7526 11.4894 11.4901C11.752 11.2275 11.8995 10.8714 11.8995 10.5001C11.8995 10.0847 12.0226 9.67864 12.2534 9.33327C12.4842 8.98791 12.8121 8.71872 13.1959 8.55977C13.5796 8.40081 14.0018 8.35922 14.4092 8.44026C14.8165 8.52129 15.1907 8.72131 15.4844 9.01502C15.7781 9.30873 15.9781 9.68294 16.0591 10.0903C16.1402 10.4977 16.0986 10.92 15.9396 11.3037C15.7807 11.6875 15.5115 12.0155 15.1662 12.2463C14.8208 12.477 14.4148 12.6002 13.9995 12.6002C13.6282 12.6002 13.2721 12.7477 13.0095 13.0103C12.747 13.2729 12.5995 13.629 12.5995 14.0003V16.8005C12.5995 17.1718 12.747 17.528 13.0095 17.7905C13.2721 18.0531 13.6282 18.2006 13.9995 18.2006C14.3708 18.2006 14.7269 18.0531 14.9894 17.7905C15.252 17.528 15.3995 17.1718 15.3995 16.8005V15.1764C16.5308 14.846 17.5046 14.1177 18.1414 13.1259C18.7781 12.134 19.0349 10.9454 18.8644 9.77909C18.6939 8.61281 18.1076 7.54746 17.2136 6.77941C16.3196 6.01137 15.1781 5.59239 13.9995 5.5997Z" fill="#CB6A84"/>
-                            <path d="M13.9995 22.4025C14.7727 22.4025 15.3995 21.7752 15.3995 21.0013C15.3995 20.2275 14.7727 19.6002 13.9995 19.6002C13.2263 19.6002 12.5995 20.2275 12.5995 21.0013C12.5995 21.7752 13.2263 22.4025 13.9995 22.4025Z" fill="#CB6A84"/>
-                            </svg> -->
                         </a>
                     </li>
                 </ul>                
@@ -75,9 +69,26 @@
                 </ul>
             </div>
 
-            <div class="header_logo">
-                <img src="/images/index/png/header/logo.png" alt="Логотип компанії">
-            </div>
+            <!-- <div class="header_logo">
+                <img src="#" alt="Логотип компанії">
+            </div> -->
+
+                <picture class="header_logo">
+                    <!-- <source srcset="/images/hero-desktop.webp 1x, /images/hero-desctop@2x.webp 2x" media="(min-width: 1728px)"  
+                    type="image/webp">    -->
+                    <source srcset="/images/index/png/logo_mac.png 1x, /images/index/png/logo_mac@2x.png 2x" media="(min-width: 1728px)">
+                
+                    <!-- <source srcset="/images/hero-tablet.webp 1x, /images/hero-tablet@2x.webp 2x" media="(min-width: 1440px)" 
+                    type="image/webp">       -->
+                    <source srcset="/images/index/png/logo_desk.png 1x, /images/index/png/logo_desk@2x.png 2x" media="(min-width: 1440px)">
+                    
+                    <!-- <source srcset="/images/hero-tablet.webp 1x, /images/hero-tablet@2x.webp 2x" media="(min-width: 834px)" 
+                    type="image/webp">       -->
+                    <source srcset="/images/index/png/logo_tab.png 1x, /images/index/png/logo_tab@2x.png 2x" media="(min-width: 834px)">
+
+                    <img src="/images/index/png/logo_mob.png" alt="Логотип компанії">
+                </picture>
+
 
             <div class="header_title-box">
                 <h1 class="header_title">Гелієві кульки <span class="visually-hidden">Луцьк</span>
