--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
                 <img src="/images/index/jpg/hero_mob.jpg" alt="Логотип компанії">
             </picture>
-
-
+            
             <nav class="navigation">
                 <ul class="navigation_list">
                     <li class="navigation_list-item link">
@@ -54,20 +53,26 @@
                         <a class="navigation_list-link link" href=""">Контакти</a>
                     </li>
                     <li class="navigation_list-item link">
-                        <a href="">
+                        <!-- <a href=""> -->
                             <svg class="navigation_list-icon">
-                            <use href="/images/svg/symbol-defs.svg#icon-question"></use>
+                            <use href="/images/index/svg/symbol-defs.svg#icon-question"></use>
                             </svg>
-                        </a>
+                        <!-- </a> -->
                     </li>
-                </ul>                
+                </ul>
+
+                <button class="navigation__burger-menu" type="button" data-burger-open>
+                    <svg class="navigation_burger-icon">
+                        <use href="/images/index/svg/symbol-defs.svg#icon-burger"></use>
+                    </svg>
+                </button>
             </nav>
 
             <div class="header_balloon">
                 <ul class="header_contacts">
                     <li class="header_contacts-item link">
                         <!-- <a href=""> -->
-                            <svg class="header_contacts-svg">
+                            <svg class="header_contacts-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-phone"></use>
                             </svg>
                         <!-- </a> -->
