--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <header class="header">
         <div class="header_section container">
 
-            <div class="header_image carousel">
+            <figure class="header_image carousel">
+                <figcaption class="visually-hidden">Декілька фото людей з гелієвими кульками</figcaption>
                 <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Image 1" id="photo1">
                 <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Image 2" id="photo2">
                 <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Image 3" id="photo3">
                 <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Image 4" id="photo4">
-            </div>
-            
+            </figure>
+
             <div class="header_transition">
                 <ul class="header_transition-list link">
                     <li>
