--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <source srcset="/images/index/webp/logo_mob.webp 1x, /images/index/webp/logo_mob@2x.webp 2x" media="(min-width: 390px)" type="image/webp">   
                 <source srcset="/images/index/png/logo_mob.png 1x, /images/index/png/logo_mob@2x.png 2x" media="(min-width: 390px)">
 
-                <img src="/images/index/png/logo_mob.png" alt="Логотип компанії">
+                <img src="/images/index/png/logo_mob.png" alt="Логотип компанії Гелієві кульки Луцьк">
             </picture>
 
 
@@ -125,7 +125,46 @@
         </div>        
     </header>
 
+    <!-- MAIN SECTION -->
     <main>
+
+        <!-- PROBLEMS SECTION -->
+        <section class="problems-section">
+            <div class="problems container">
+                <h1 class="visually-hidden">Чому наші гелієві кульки кращі?</h1>
+                <ul class="problems__list">
+                    <li class="problems__list-item link">
+                        <div class="problems__list-balloon--1">                        
+                        </div>
+                        <p class="problems__list-text">Мали негативний досвід купівлі гелієвих кульок?</p>
+                    </li>
+                    <li class="problems__list-item link">
+                        <div class="problems__list-balloon--2">                            
+                            <p class="problems__list-text">Вам обіцяли якість, а кульки не літали вже наступного ранку? </p>
+                        </div>
+                    </li>
+                    <li class="problems__list-item link">
+                        <div class="problems__list-balloon--3">                            
+                            <p class="problems__list-text">Ми працюємо на ринку вже більше 10 років, маємо велику родину постійних покупців та гарні відгуки від них.</p>
+                        </div>
+                    </li>
+                    <li class="problems__list-item link">
+                        <div class="problems__list-balloon--4">                            
+                            <p class="problems__list-text">Всі наші кульки проходять спеціальну обробку, що збільшує час польоту у 5 разів та більше.</p>
+                        </div>
+                    </li>
+                    <li class="problems__list-item link">
+                        <div class="problems__list-balloon--5">                            
+                            <p class="problems__list-text">Задоволення клієнтів - не пусті слова, оскільки ми щиро бажаємо, щоб ви приходили до нас ще і ще!</p>
+                        </div>
+                    </li>
+                </ul>
+                <div class="bal"></div>
+
+            </div>
+
+        </section>
+
     </main>
     
     <script src="/js/carousel.js"></script>
