Products section start

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- PROBLEMS SECTION -->
         <section class="problems-section container">
             <div class="problems">
-                <h1 class="visually-hidden">Чому наші гелієві кульки кращі?</h1>
+                <h2 class="visually-hidden">Чому наші гелієві кульки кращі?</h2>
                 <ul class="problems__list link">
                     <li class="problems__list-item">
                         <div class="problems__list-balloon--1 balloon-negative">                        
@@ -162,40 +162,10 @@
             </div>
         </section>
 
-
-                <!-- <section class="problems-section container">
-            <div class="problems section-narrow section-narrow">
-                <h1 class="visually-hidden">Чому наші гелієві кульки кращі?</h1>
-                <ul class="problems__list">
-                    <li class="problems__list-item link">
-                        <div class="problems__list-balloon problems__balloon--1 problems__balloon--red">                        
-                        </div>
-                        <p class="problems__list-text problems__text--1 problems__text--nagative">Мали негативний досвід купівлі гелієвих кульок?</p>
-                    </li>
-                    <li class="problems__list-item link">
-                        <div class="problems__list-balloon problems__balloon--2 problems__balloon--red">                            
-                            <p class="problems__list-text problems__text--1 problems__text--nagative">Вам обіцяли якість, а кульки не літали вже наступного ранку? </p>
-                        </div>
-                    </li>
-                    <li class="problems__list-item link">
-                        <div class="problems__list-balloon problems__balloon--3 problems__balloon--green">                            
-                            <p class="problems__list-text problems__text--1 problems__text--positive">Ми працюємо на ринку вже більше 10 років, маємо велику родину постійних покупців та гарні відгуки від них.</p>
-                        </div>
-                    </li>
-                    <li class="problems__list-item link">
-                        <div class="problems__list-balloon problems__balloon--4 problems__balloon--green">                            
-                            <p class="problems__list-text problems__text--1 problems__text--positive">Всі наші кульки проходять спеціальну обробку, що збільшує час польоту у 5 разів та більше.</p>
-                        </div>
-                    </li>
-                    <li class="problems__list-item link">
-                        <div class="problems__list-balloon problems__balloon--5 problems__balloon--green">                            
-                            <p class="problems__list-text problems__text--1 problems__text--positive">Задоволення клієнтів - не пусті слова, оскільки ми щиро бажаємо, щоб ви приходили до нас ще і ще!</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section> -->
-
+        <!-- PRODUCTS SECTION -->
+        <section>
+            
+        </section>
 
     </main>
     
