Production section - block

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="header_section">
 
             <figure class="header_image carousel">
-                <figcaption class="visually-hidden">Декілька фото людей з гелієвими кульками</figcaption>
                 <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Image 1" id="photo1">
                 <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Image 2" id="photo2">
                 <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Image 3" id="photo3">
                 <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Image 4" id="photo4">
+                <figcaption class="visually-hidden">Дівчата з гелієвими кульками</figcaption>
             </figure>
 
             <div class="header_transition">
@@ -163,7 +163,31 @@
         </section>
 
         <!-- PRODUCTS SECTION -->
-        <section>
+        <section class="products-section container">
+            <div class="products section-narrow">
+                <!-- Caption background -->
+                <div class="caption">
+                    <h2 class="caption_text">Наші <span class="visually-hidden">гелієві</span> кульки</h2>
+                </div>
+                
+                <!-- Block 1 -->
+                <h3 class="products__block-title"></h3>
+                <ul class="products__list link">
+                    <li class="products__list-item">
+                        <figure class="products__card">
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>                  
+                        <div class="products__card-frame"></div>
+                        <div class="products__card-frame></div>
+                        <h4 class="products__card-title"></h4>
+                    </li>
+                    <li></li>
+                    <li></li>
+                </ul>
+
+            </div>
+
             
         </section>
 
