--- a/index.html
+++ b/index.html
@@ -174,16 +174,37 @@
                 <h3 class="products__block-title"></h3>
                 <ul class="products__list link">
                     <li class="products__list-item">
-                        <figure class="products__card">
-                            <img src="" alt="">
-                            <figcaption></figcaption>
+                        <figure>
+                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                            </figcaption>
                         </figure>                  
-                        <div class="products__card-frame"></div>
-                        <div class="products__card-frame></div>
-                        <h4 class="products__card-title"></h4>
+                        <div class="products__card products__cardframe--1"></div>
+                        <div class="products__card products__cardframe--2"></div>
                     </li>
-                    <li></li>
-                    <li></li>
+
+                    <li>
+                        <figure>
+                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                            </figcaption>
+                        </figure>                  
+                        <div class="products__card products__cardframe--1"></div>
+                        <div class="products__card products__cardframe--2"></div>
+                    </li>
+
+                    <li>
+                        <figure>
+                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                            </figcaption>
+                        </figure>                  
+                        <div class="products__card products__cardframe--1"></div>
+                        <div class="products__card products__cardframe--2"></div>
+                    </li>
                 </ul>
 
             </div>
