Products section 1 block

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="header_section">
 
             <figure class="header_image carousel">
-                <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Image 1" id="photo1">
-                <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Image 2" id="photo2">
-                <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Image 3" id="photo3">
-                <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Image 4" id="photo4">
+                <img src="/images/index/jpg/hero_mac@2x.jpg" alt="Дівчина несе по центру Луцька гелієві кульки" id="photo1">
+                <img src="/images/index/jpg/hero2_mac@2x.jpg" alt="Дівчина з гелієвими кульками біля авто" id="photo2">
+                <img src="/images/index/jpg/hero3_mac@2x.jpg" alt="Дівчина з гелієвими кульками та бокалом вина дивиться на Луцьк" id="photo3">
+                <img src="/images/index/jpg/hero4_mac@2x.jpg" alt="Дівчина приймає в подарунок гелієві кульки та квіти" id="photo4">
                 <figcaption class="visually-hidden">Дівчата з гелієвими кульками</figcaption>
             </figure>
 
@@ -169,33 +169,35 @@
                 <div class="caption">
                     <h2 class="caption_text">Наші <span class="visually-hidden">гелієві</span> кульки</h2>
                 </div>
+
                 
                 <!-- Block 1 -->
-                <h3 class="products__block-title"></h3>
+                <h3 class="products__block-title">Гелієві кульки для закоханих</h3>
                 <ul class="products__list link">
-                    <li class="products__list-item">
+                    <div class="card__frame card__frame--1"></div>
+                    <div class="card__frame card__frame--2"></div>
+                    <li class="card products-card products__section--1">
                         <figure>
-                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title">Кульки на дівич-вечір</h4>
                             </figcaption>
                         </figure>                  
-                        <div class="products__card products__cardframe--1"></div>
-                        <div class="products__card products__cardframe--2"></div>
                     </li>
 
-                    <li>
+                    <div class="card__frame card__frame--3"></div>
+                    <div class="card__frame card__frame--4"></div>
+                    <li class="card products-card products__section--2">
                         <figure>
-                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title">Кульки на дівич-вечір</h4>
                             </figcaption>
                         </figure>                  
-                        <div class="products__card products__cardframe--1"></div>
-                        <div class="products__card products__cardframe--2"></div>
                     </li>
 
-                    <li>
+
+                    <!-- <li class="products__list-item>
                         <figure>
                             <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
@@ -204,7 +206,18 @@
                         </figure>                  
                         <div class="products__card products__cardframe--1"></div>
                         <div class="products__card products__cardframe--2"></div>
-                    </li>
+                    </li> -->
+
+                    <!-- <li class="products__list-item>
+                        <figure>
+                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                            </figcaption>
+                        </figure>                  
+                        <div class="products__card products__cardframe--1"></div>
+                        <div class="products__card products__cardframe--2"></div>
+                    </li> -->
                 </ul>
 
             </div>
