--- a/index.html
+++ b/index.html
@@ -169,55 +169,67 @@
                 <div class="caption">
                     <h2 class="caption_text">Наші <span class="visually-hidden">гелієві</span> кульки</h2>
                 </div>
-
                 
                 <!-- Block 1 -->
-                <h3 class="products__block-title">Гелієві кульки для закоханих</h3>
+                <h3 class="products__block-title products__title--1">Гелієві кульки для закоханих</h3>
                 <ul class="products__list link">
-                    <div class="card__frame card__frame--1"></div>
-                    <div class="card__frame card__frame--2"></div>
-                    <li class="card products-card products__section--1">
+                    <li class="card products__section--1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title--1">Кульки на дівич-вечір</h4>
                             </figcaption>
-                        </figure>                  
+                        </figure>
                     </li>
 
-                    <div class="card__frame card__frame--3"></div>
-                    <div class="card__frame card__frame--4"></div>
                     <li class="card products-card products__section--2">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="card__title--2">Кульки з серцями, кульки на весілля</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+
+                    <li class="card products-card products__section--3">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="card__title--1">Гендерні кульки</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <!-- Block 2 -->
+                <h3 class="products__block-title products__title--2">Гелієві кульки для закоханих</h3>
+                <ul class="products__list link">
+                    <li class="card products__section--1">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title--1">Кульки на дівич-вечір</h4>
                             </figcaption>
-                        </figure>                  
+                        </figure>
                     </li>
 
-
-                    <!-- <li class="products__list-item>
-                        <figure>
-                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                    <li class="card products-card products__section--2">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title--2">Кульки з серцями, кульки на весілля</h4>
                             </figcaption>
-                        </figure>                  
-                        <div class="products__card products__cardframe--1"></div>
-                        <div class="products__card products__cardframe--2"></div>
-                    </li> -->
+                        </figure>
+                    </li>
 
-                    <!-- <li class="products__list-item>
-                        <figure>
-                            <img class="products__card-image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                    <li class="card products-card products__section--3">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="products__card-title">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title--1">Гендерні кульки</h4>
                             </figcaption>
-                        </figure>                  
-                        <div class="products__card products__cardframe--1"></div>
-                        <div class="products__card products__cardframe--2"></div>
-                    </li> -->
+                        </figure>
+                    </li>
                 </ul>
 
             </div>
