--- a/index.html
+++ b/index.html
@@ -171,66 +171,98 @@
                 </div>
                 
                 <!-- Block 1 -->
-                <h3 class="products__block-title products__title--1">Гелієві кульки для закоханих</h3>
+                <h3 class="products__title">Гелієві кульки для закоханих</h3>
                 <ul class="products__list link">
-                    <li class="card products__section--1">
+                    <li class="card products__section">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--1">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title">Кульки на дівич-вечір</h4>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--2">
+                    <li class="card products-card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--2">Кульки з серцями, кульки на весілля</h4>
+                                <h4 class="card__title--type2">Кульки з серцями, кульки на весілля</h4>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--3">
+                    <li class="card products-card products__section--type3">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--1">Гендерні кульки</h4>
+                                <h4 class="card__title">Гендерні кульки</h4>
                             </figcaption>
                         </figure>
                     </li>
                 </ul>
 
                 <!-- Block 2 -->
-                <h3 class="products__block-title products__title--2">Гелієві кульки для закоханих</h3>
-                <ul class="products__list link">
-                    <li class="card products__section--1">
+                <h3 class="products__title--type2">Повітряні кульки для вашої малечі</h3>
+                <ul class="products__list products__list--average link">
+                    <li class="card products__section">
                         <figure>
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--1">Кульки на дівич-вечір</h4>
+                                <h4 class="card__title--type2">Кульки на виписку з пологового будинку</h4>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--2">
+                    <li class="card products-card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--2">Кульки з серцями, кульки на весілля</h4>
+                                <h4 class="card__title--type2">Кульки на перший рочок хлопчику</h4>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li class="card products-card products__section--3">
+                    <li class="card products-card products__section--type3">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
                             <figcaption>
-                                <h4 class="card__title--1">Гендерні кульки</h4>
+                                <h4 class="card__title--type2">Кульки на 1-й рочок дівчинки</h4>
                             </figcaption>
                         </figure>
                     </li>
                 </ul>
+
+                <!-- Block 3 -->
+                <h3 class="products__title">Кульки на день народження</h3>
+                <ul class="products__list products__list link">
+                    <li class="card products__section">
+                        <figure>
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="card__title--type2">Кульки на дитячий день народження</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+
+                    <li class="card products-card products__section--type2">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="card__title--type2">Фольговані кульки, цифри та фігури</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+
+                    <li class="card products-card products__section--type3">
+                        <figure class="card__figure">
+                            <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір">
+                            <figcaption>
+                                <h4 class="card__title--type2">Сети з кульок для вишуканих пані</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
 
             </div>
 
