--- a/index.html
+++ b/index.html
@@ -263,7 +263,25 @@
                     </li>
                 </ul>
 
+                <!-- Block 4 -->
+                <h3 class="products__title--type3">Карнавальна продукція та товари для свята</h3> 
+               <figure class="products__gallery">
+                    <ul class="products__gallery-list link">
+                        <li class="products__gallery-item">
+                            <img src="/images/index/jpg/card2.jpg" alt="">
+                        </li>
 
+                        <li class="products__gallery-item--average">
+                            <img src="" alt="">
+                        </li>
+
+                        <li class="products__gallery-item">
+                            <img src="/images/index/jpg/card2.jpg" alt="">
+                        </li>
+                        <p class="products__gallery-text">На вас чекає асортимент карнавальної продукції до Нового року, Halloween та Дня народження.</p>
+                    </ul>
+               </figure>
+               
             </div>
 
             
