--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 
                 <!-- Block 1 -->
-                <h3 class="products__title">Гелієві кульки для закоханих</h3>
+                <h3 class="products__title products__title--type1">Гелієві кульки для закоханих</h3>
                 <ul class="products__list link">
                     <li class="card products__section">
                         <figure>
@@ -202,7 +202,7 @@
                 </ul>
 
                 <!-- Block 2 -->
-                <h3 class="products__title--type2">Повітряні кульки для вашої малечі</h3>
+                <h3 class="products__title products__title--type2">Повітряні кульки для вашої малечі</h3>
                 <ul class="products__list products__list--average link">
                     <li class="card products__section">
                         <figure>
@@ -233,7 +233,7 @@
                 </ul>
 
                 <!-- Block 3 -->
-                <h3 class="products__title">Кульки на день народження</h3>
+                <h3 class="products__title products__title--type3">Кульки на день народження</h3>
                 <ul class="products__list products__list link">
                     <li class="card products__section">
                         <figure>
@@ -264,8 +264,8 @@
                 </ul>
 
                 <!-- Block 4 -->
-                <h3 class="products__title--type3">Карнавальна продукція та товари для свята</h3> 
-               <figure class="products__gallery">
+                <h3 class="products__title products__title--type4">Карнавальна продукція та товари для свята</h3> 
+                <figure class="products__gallery">
                     <ul class="products__gallery-list link">
                         <li class="products__gallery-item">
                             <img src="/images/index/jpg/card2.jpg" alt="">
@@ -280,7 +280,36 @@
                         </li>
                         <p class="products__gallery-text">На вас чекає асортимент карнавальної продукції до Нового року, Halloween та Дня народження.</p>
                     </ul>
-               </figure>
+                </figure>
+
+                <!-- Block 5 -->
+                <h3 class="products__title products__title--type5">Оформлення кульками</h3>
+                <figure>
+                    <ul class="link">
+                        <li>
+                            <img src="" alt="">
+                        </li>
+
+                        <li>
+                            <img src="" alt="">
+                        </li>
+
+                        <li>
+                            <img src="" alt="">
+                        </li>
+
+                        <li>
+                            <img src="" alt="">
+                        </li>
+
+                        <li>
+                            <img src="" alt="">
+                        </li>
+                        <p></p>
+                        <p></p>
+                    </ul>
+                </figure> 
+
                
             </div>
 
